--- a/estaciones/elInvierno.html
+++ b/estaciones/elInvierno.html
@@ -10,10 +10,10 @@
           background: -webkit-linear-gradient(#9CF, #cc99ff); /* For Safari 5.1 to 6.0 */
           background: -o-linear-gradient(#9CF, #cc99ff); /* For Opera 11.1 to 12.0 */
           background: -moz-linear-gradient(#9CF, #cc99ff); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(#9CF, #cc99ff); /* Standard syntax (must be last) */
+          background: linear-gradient(#ffff33,#cc0000); /* Standard syntax (must be last) */
           border-radius:30px;
           width:70%;
-          height:750px;
+          height:900px;
     }
     .contenedor
     {
@@ -30,20 +30,20 @@
   <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
- <body  >
-   <p style="text-align:center;font-size:40px;margin-top:1%">LA HORMIGA Y EL GRANO</p>
+  <body bgcolor="#cc00ff">
+   <p style="text-align:center;font-size:40px;margin-top:1%"><img src="images/hormiga.png" width="90" height="90"  >  LA HORMIGA Y EL GRANO <img src="images/hormiga.png" width="90" height="90"  ></p>
   <div class="principal"> 
      <div class="contenedor" > 
 Érase una vez una <b>hormiga</b> llamada <b>Junca</b>, muy trabajadora, que vivía en el hormiguero con el resto de su familia, unas 50.000 hormigas.<br>
 
 Las hormigas cargaban el grano para <b>el invierno </b>en un almacén, y así cuando llegara el frío podrían disponer de alimentos para todas. Pero este año, el grano era de muy pequeño tamaño y era difícil de transportar.<br> Se llegó a una situación de pesimismo en la que, hasta las hormigas más sabias, desconfiaban de que pudieran sobrevivir al invierno.
 
-<br>Mientras tanto, Junca quería cargar más grano, para ayudar aún más a su <b>familia</b>, y comprendió que transmitiendo su optimismo al resto de hormigas, lo conseguirían.<p>
-Entonces, fue a entrenarse con una <b>hormiga </b>más fuerte que ella, que se llamaba <b>Pepe</b>. <br>Pepe le enseñó los trucos para cargar más grano con el mismo esfuerzo. Junca ensayó durante unos días y cada vez era capaz de cargar más grano.<br><p>
+<br>Mientras tanto, Junca quería cargar más grano, para ayudar aún más a su <b>familia</b>, y comprendió que transmitiendo su optimismo al resto de hormigas, lo conseguirían.
+Entonces, fue a entrenarse con una <b>hormiga </b>más fuerte que ella <img src="images/hormiga2.gif" width="90" height="90"  >, que se llamaba <b>Pepe</b>. <br>Pepe le enseñó los trucos para cargar más grano con el mismo esfuerzo. Junca ensayó durante unos días y cada vez era capaz de cargar más grano.<br><p>
 
-Cuando Junca se vio preparada para transmitir su mensaje, convocó al resto de <b>hormigas</b> y les dijo: “Ya sé que pensáis que no sobreviviremos al invierno.<br> Pero tengo la solución: En primer lugar debéis creer que lo conseguiremos, y en segundo lugar, os enseñaré los movimientos que debéis realizar para cargar más <b>grano</b>.”<br>
+Cuando Junca se vio preparada para transmitir su mensaje, convocó al resto de <b>hormigas</b> y les dijo: “Ya sé que pensáis que no sobreviviremos al invierno.<br> Pero tengo la solución: En primer lugar debéis creer que lo conseguiremos, y en segundo lugar, os enseñaré los movimientos que debéis realizar para cargar más <b>grano</b>.”
 
-<br>De esta manera, todo el hormiguero se puso a trabajar como dijo Junca, con <b>optimismo</b>, y antes de que llegara el invierno ya habían recolectado más grano que el año anterior.<p> Por lo que, gracias a Junca, todas las hormigas sobrevivieron al invierno sin <b>ningún problema</b>.<br><br>
+<br>De esta manera, todo el hormiguero se puso a trabajar como dijo Junca<img src="images/hormiga3.png" width="90" height="90" >, con <b>optimismo</b>, y antes de que llegara el invierno ya habían recolectado más grano que el año anterior.<p> Por lo que, gracias a Junca, todas las hormigas sobrevivieron al invierno sin <b>ningún problema</b>.<br>
  
 <br><h2>FIN.</h2>
 
