--- a/estaciones/elOtoño.html
+++ b/estaciones/elOtoño.html
@@ -10,10 +10,10 @@
           background: -webkit-linear-gradient(#9CF, #cc99ff); /* For Safari 5.1 to 6.0 */
           background: -o-linear-gradient(#9CF, #cc99ff); /* For Opera 11.1 to 12.0 */
           background: -moz-linear-gradient(#9CF, #cc99ff); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(#9CF, #cc99ff); /* Standard syntax (must be last) */
+             background: linear-gradient(#ffff33,#cc0000); /* Standard syntax (must be last) */
           border-radius:30px;
           width:70%;
-          height:700px;
+          height:950px;
     }
     .contenedor
     {
@@ -30,16 +30,16 @@
   <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
- <body  >
-   <p style="text-align:center;font-size:40px;margin-top:1%">LAS DOS GOTITAS</p>
+ <body bgcolor="#cc00ff">
+   <p style="text-align:center;font-size:40px;margin-top:1%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/gota1.gif" width="100" height="100"  >LAS DOS GOTITAS <img src="images/gota1.gif" width="100" height="100"  ></p>
   <div class="principal"> 
      <div class="contenedor" > 
 
- Las dos <b>gotitas</b> de agua vivían en una gran nube. Comenzó a <b>llover</b> y la gotita pequeña  no quería caer, le daba mucho <b>miedo</b>.<br> Su <b>mamá</b> le contó que era muy <b>divertido</b>, que un día calló en una flor, otro día en una casa y otro día en una calle muy bonita. <p><b>La gotita pequeña</b> ,con mucho miedo, agarró de la mano a su mamá, cerró los ojos y se dejó caer.<p>
+ Las dos <b>gotitas</b> de agua vivían en una gran nube. Comenzó a <b>llover</b> y la gotita pequeña  no quería caer, le daba mucho <b>miedo</b>.<br> Su <b>mamá</b> le contó que era muy <b>divertido</b>, que un día calló en una flor, otro día en una casa y otro día en una calle muy bonita. <p><b>La gotita pequeña</b><img src="images/gota2.gif" width="60" height="60"  > ,con mucho miedo, agarró de la mano a su mamá, cerró los ojos y se dejó caer.<p>
 
-Las dos gotitas de agua cayeron junto con las demás, formando una gran <b>lluvia </b>plateada.<br> La mamá mojó la hoja de un árbol, se resbaló y cayó al suelo produciendo un gran <b>ruido</b>: "plaf".<br> Su hija,  como era más delgadita, tardó más en caer, se posó sobre un paraguas rojo realizando un ruidito: "clic". <br>Después resbaló y cayó en la gorro de una <b>niña</b>, "clic", se deslizó por su nariz  para más tarde gotear en su abrigo azul. <p>Al final acabó en unas botas de agua.<br> Estuvo un buen rato en la bota hasta que la niña comenzó a andar y cayó a un gran <b>charco</b> que había en el suelo. <br>Allí encontró a su mamá  a quien le dio un gran abrazo.<br>
+Las dos gotitas de agua cayeron junto con las demás, formando una gran <b>lluvia </b>plateada<img src="images/lluvia.png" width="80" height="80"  >. La mamá mojó la hoja de un árbol, se resbaló y cayó al suelo produciendo un gran <b>ruido</b>: "plaf".Su hija,  como era más delgadita, tardó más en caer, se posó sobre un paraguas rojo<img src="images/paraguas.png" width="80" height="80"  > realizando un ruidito: "clic". <br>Después resbaló y cayó en la gorro de una <b>niña</b> <img src="images/gorro.png" width="80" height="80"  >, "clic", se deslizó por su nariz  para más tarde gotear en su abrigo azul. <p>Al final acabó en unas botas de agua <img src="images/botas.png" width="80" height="80"  >. Estuvo un buen rato en la bota hasta que la niña comenzó a andar y cayó a un gran <b>charco</b> que había en el suelo. <br>Allí encontró a su mamá  a quien le dio un gran abrazo.<br>
 
-Después de contarse el largo viaje, quedaron fundidas en el gran <b>charco</b> de agua.<p> Más tarde, salió el <b>sol</b>, se reflejó en el charco y apareció un bonito <b>arco iris</b>.<br><br>
+Después de contarse el largo viaje, quedaron fundidas en el gran <b>charco</b> de agua.<p> Más tarde, salió el <b>sol</b>, se reflejó en el charco y apareció un bonito <b>arco iris</b>. <img src="images/arcoiris.png" width="80" height="50"  ><br><br>
 <br><h2>FIN.</h2>
 
  </div>
