--- a/estaciones/elVerano.html
+++ b/estaciones/elVerano.html
@@ -6,18 +6,19 @@
  <style type="text/css">
     .principal
     {
+		
           margin-left:17.5%;
           background: -webkit-linear-gradient(#9CF, #cc99ff); /* For Safari 5.1 to 6.0 */
           background: -o-linear-gradient(#9CF, #cc99ff); /* For Opera 11.1 to 12.0 */
           background: -moz-linear-gradient(#9CF, #cc99ff); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(#9CF, #cc99ff); /* Standard syntax (must be last) */
+          background: linear-gradient(#ffff33,#cc0000); /* Standard syntax (must be last) */
           border-radius:30px;
           width:70%;
-          height:610px;
+          height:800px;
     }
     .contenedor
     {
-		font-family: "Homer Simpson", cursive; 
+		font-family: Homer Simpson, cursive; 
 		font-size: 16pt; 
         height:43px;
         margin-left:3%;
@@ -27,31 +28,30 @@
 
     }
  </style>
+
   <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
- <body  >
-   <p style="text-align:center;font-size:40px;margin-top:1%">EL CANGREJO MORENITO</p>
+ <body bgcolor="#cc00ff">
+ 
+   <p   style="text-align:center;font-size:50px;margin-top:0%" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/sol2.gif" width="120" height="120"  >&nbsp;EL CANGREJO MORENITO <img src="images/sol2.gif" width="120" height="120"  ></p>
   <div class="principal"> 
-  <!-- <img src="./images/morenito.jpg"  > -->
      <div class="contenedor" > 
+
 	
- Érase una vez un <b>cangrejo</b> que vivía en una playa del sur de <b>España</b>. El resto de cangrejos le llamaban <b>Croqui</b>, porque le gustaba mucho rebozarse en la arena y ponerse como una croqueta.<p>A Croqui le gustaba mucho la luz del <b>sol</b>, y cuando llegaba el <b>verano</b> se volvía loco por coger el mejor sitio de la playa para <b>tomar el sol</b>.
+ Érase una vez un <b>cangrejo</b><img src="images/cangrejo2.png" width="90" height="90"  > que vivía en una <b>playa </b>  del sur de <b>España</b><img src="images/espana.png" width="80" height="70"  >. El resto de cangrejos le llamaban <b>Croqui</b>, porque le gustaba mucho rebozarse en la arena y ponerse como una croqueta.A Croqui le gustaba mucho la luz del <b>sol</b>,<img src="images/sol2.png" width="90" height="90"  > y cuando llegaba el <b>verano</b> se volvía loco por coger el mejor sitio de la playa para <b>tomar el sol</b>.
 
-Siempre estaba muy <b>moreno</b>, pero nunca hacía caso de las recomendaciones de los cangrejos más mayores.<p>
+Siempre estaba muy <b>moreno</b>, pero nunca hacía caso de las recomendaciones de los cangrejos más mayores.
 
-Los cangrejos adultos le decían que se pusiera <b>crema protectora</b>, para evitar las quemaduras que el sol le podían provocar en su caparazón, pero él decía que eso no le iba a hacer daño.<br>
+Los cangrejos adultos le decían que se pusiera <b>crema protectora</b><img src="images/crema.png" width="90" height="90"  >, para evitar las quemaduras que el sol le podían provocar en su caparazón, pero él decía que eso no le iba a hacer daño.<br>
 
-Un día de verano, con un sol espléndido, estaba Croqui tomando el sol,cuando de repente empezó a <b>oler a quemado</b>. “¿Qué es lo que estarán quemando?“, pensó.Hasta que se dio cuenta de que estaba saliendo humo de una de sus patas, y que se estaba chamuscando.<p> Así que, corrió y corrió para meterse en el agua a refrescarse.
+Un día de verano, con un sol espléndido, estaba Croqui tomando el sol,cuando de repente empezó a <b>oler a quemado</b>. “¿Qué es lo que estarán quemando?“, pensó.Hasta que se dio cuenta de que estaba saliendo humo de una de sus patas, y que se estaba chamuscando. Así que, corrió y corrió <img src="images/cangrejoB.gif" width="120" height="90"  > para meterse en el agua a refrescarse.
 
 Después de salir del agua, Croqui observó las <b>quemaduras</b> que tenía en la pata, y se dio cuenta de que si hubiera hecho caso a los cangrejos más mayores, no se hubiera quemado.
 
-Croqui aprendió que, el <b>sol en la playa</b>, hay que tomarlo con protección. Además, cada vez que nos bañamos tenemos que <b>volver a echarnos crema</b>, para que no nos pase como a <b>Croqui el cangrejo morenito</b>.<p>
+Croqui aprendió que, el <b>sol en la playa</b>, hay que tomarlo con protección. Además, cada vez que nos bañamos tenemos que <b>volver a echarnos crema</b>, para que no nos pase como a <b>Croqui el cangrejo morenito</b> .<br>
 
-<!-- <img src="./images/playa.jpg">
-<img src="./images/miniMorenito.jpg"> -->
 <br><h2>FIN.</h2>
-
  </div>
 
 </div>
