--- a/estaciones/estaciones.html
+++ b/estaciones/estaciones.html
@@ -10,7 +10,7 @@
           background: -webkit-linear-gradient(#9CF, #cc99ff); /* For Safari 5.1 to 6.0 */
           background: -o-linear-gradient(#9CF, #cc99ff); /* For Opera 11.1 to 12.0 */
           background: -moz-linear-gradient(#9CF, #cc99ff); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(#9CF, #cc99ff); /* Standard syntax (must be last) */
+          background: linear-gradient(#ffff99,#ff3300); /* Standard syntax (must be last) */
           border-radius:30px;
           width:70%;
           height:722px;
@@ -27,8 +27,8 @@
  </style>
   <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
- <body>
- <p style="text-align:center;font-size:40px;margin-top:1%">Selecciona un cuento</p>
+ <body bgcolor="#cc00ff">
+ <p style="text-align:center;font-size:50px;margin-top:0%">Selecciona un cuento</p>
   <div class="principal"> 
      <div class="contenedor"> 
      
