Styles added in Index

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -2,21 +2,26 @@
 <HTML>
  <HEAD>
   <TITLE> Edupeques </TITLE>
-
+<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" href="../css/style.css">
   <!-- localhost/php/01-Basico.php -->
  </HEAD>
 
 
- <BODY> 
-
+ <BODY id="index"> 
+<img src="../images/logosz.png" style="position:absolute;margin:2%;height:50px;"/>
 <center>   <img src="./img/logo.png" align=center width=500px height=500px></center>
  <form name="datos" method="post" action="pag2.html">
-<TABLE align="center">
+<TABLE align="center" id="boton">
 <TR>
-	<TD><input TYPE="submit" name="ninos" id="nino"  value="   Niños   "></TD>
-	<TD><input TYPE="submit" name="porfes" id="profes"  value="Profesores"></TD>
+	<TD><input TYPE="submit" name="ninos" id="nino"  value="Ni&ntilde;os" class="selec"></TD>
+	<TD><input TYPE="submit" name="porfes" id="profes"  value="Profesores" class="selec"></TD>
 </TR>
 </TABLE>
+<div  id="title">
+    <p align="center" style="font-size:75px">EDUPEQUES</p>
+    <p align="center">Educacion Infantil</p>
+</div>
 </form>
 
 	
