--- a/Habitos/lasProfesiones.html
+++ b/Habitos/lasProfesiones.html
@@ -11,13 +11,51 @@ function pintar(obj)
    document.getElementById(obj).style.display = '';
 }
 </script>
-
 <style type="text/css">
+    .principal
+    {
+		
+          margin-left:20%;
+          background: -webkit-linear-gradient(#9CF, #cc99ff); /* For Safari 5.1 to 6.0 */
+          background: -o-linear-gradient(#9CF, #cc99ff); /* For Opera 11.1 to 12.0 */
+          background: -moz-linear-gradient(#9CF, #cc99ff); /* For Firefox 3.6 to 15 */
+          background: linear-gradient(#00ff66,#cc0066); /* Standard syntax (must be last) */
+          border-radius:30px;
+          width:75%;
+          height:620px;
+    }
+    .contenedor
+    {
+		font-family: Homer Simpson, cursive; 
+		font-size: 16pt; 
+        height:43px;
+        margin-left:3%;
+		margin-bottom:50%;
+		padding-top:1%;
+		color:#000000;
+
+    }
+ 
+
+
+ .imagen
+{
+ position:absolute;
+ top:10px;
+ left:200px;
+ width:416;
+ height:512;
+ padding:40;
+               
+} 
+
 
 .titulo
 {
-	padding:1px;
+	padding:50px;
 	float:left;
+	height:512;
+
 }
  .imagen
 {
@@ -31,24 +69,25 @@ function pintar(obj)
  
                 
 } 
-/*.cabezera
-{
-	background-color:#990000;
-	height:85px;
-	text-align:center;;
-}*/
+
 </style>
 
 
     </HEAD>
-<body bgcolor="#ffffff">
+<body bgcolor="#9933cc">
 
  <div class="cabezera">
-		<div class="titulo"><img src="imagenes/LasProfesiones.gif" img></div>
+		
 
  </div>
+<!-- <div style="cursor: pointer"> -->
+<IMG SRC="./imagenes/oficiosCompleto.png" class="imagen" USEMAP="#oficiosCompleto.png" >
 
-<IMG SRC="./imagenes/oficiosCompleto.jpg" class="imagen" USEMAP="#oficiosCompleto.png" >
+<div class="principal"> 
+	<div class="titulo"> 
+		<p style="text-align:center;font-size:50px;margin-top:-10%"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Las Profesiones </b></p>
+	</div>
+     <div class="contenedor" > 
 
 <IMG SRC="./imagenes/pescador.gif" class="imagen" USEMAP="#oficiosCompleto.png" id="pescador" style="display:none" >
 <IMG SRC="./imagenes/informatica.gif" class="imagen" USEMAP="#oficiosCompleto.png" id="informatica" style="display:none">
@@ -67,35 +106,38 @@ function pintar(obj)
 
 <MAP NAME="oficiosCompleto.png">
 <!-- pescador-->
-<AREA SHAPE=RECT COORDS="8,8,157,184" OnClick="pintar('pescador')">
+<AREA SHAPE=RECT COORDS="8,8,157,184" OnClick="pintar('pescador') "style="cursor: pointer">
 <!-- informatica -->
-<AREA SHAPE=RECT COORDS="7,196,155,368" Onclick="pintar('informatica')">
+<AREA SHAPE=RECT COORDS="7,196,155,368" Onclick="pintar('informatica')"style="cursor: pointer">
 <!-- panadero -->
-<AREA SHAPE=RECT COORDS="6,381,160,555" Onclick="pintar('panadero')">
+<AREA SHAPE=RECT COORDS="6,381,160,555" Onclick="pintar('panadero')"style="cursor: pointer">
 <!-- pintor-->   
-<AREA SHAPE=RECT COORDS="169,8,309,181" Onclick="pintar('pintor')">
+<AREA SHAPE=RECT COORDS="169,8,309,181" Onclick="pintar('pintor')"style="cursor: pointer">
 <!-- carpintero-->
-<AREA SHAPE=RECT COORDS="167,195,318,368" Onclick="pintar('carpintero')">
+<AREA SHAPE=RECT COORDS="167,195,318,368" Onclick="pintar('carpintero')"style="cursor: pointer">
 <!-- mecanico -->
-<AREA SHAPE=RECT COORDS="165,380,315,550" Onclick="pintar('mecanico')">
+<AREA SHAPE=RECT COORDS="165,380,315,550" Onclick="pintar('mecanico')"style="cursor: pointer">
 <!-- profesora -->
-<AREA SHAPE=RECT COORDS="324,7,475,186" Onclick="pintar('profesora')">
+<AREA SHAPE=RECT COORDS="324,7,475,186" Onclick="pintar('profesora')"style="cursor: pointer">
 <!-- electricista -->
-<AREA SHAPE=RECT COORDS="326,197,471,371" Onclick="pintar('electricista')">
+<AREA SHAPE=RECT COORDS="326,197,471,371" Onclick="pintar('electricista')"style="cursor: pointer">
 <!-- zapatero -->
-<AREA SHAPE=RECT COORDS="327,381,475,555" Onclick="pintar('zapatero')">
+<AREA SHAPE=RECT COORDS="327,381,475,555" Onclick="pintar('zapatero')"style="cursor: pointer">
 <!-- fotografo-->
-<AREA SHAPE=RECT COORDS="485,5,632,180" OnClick="pintar('fotografo')">
+<AREA SHAPE=RECT COORDS="485,5,632,180" OnClick="pintar('fotografo')"style="cursor: pointer">
 <!-- pastelero-->
-<AREA SHAPE=RECT COORDS="487,194,634,371" OnClick="pintar('pastelero')">
+<AREA SHAPE=RECT COORDS="487,194,634,371" OnClick="pintar('pastelero')"style="cursor: pointer">
 <!-- cartero-->
-<AREA SHAPE=RECT COORDS="484,379,629,554" OnClick="pintar('cartero')">
+<AREA SHAPE=RECT COORDS="484,379,629,554" OnClick="pintar('cartero')"style="cursor: pointer">
 <!-- costurera-->
-<AREA SHAPE=RECT COORDS="645,8,792,186" OnClick="pintar('costurera')">
+<AREA SHAPE=RECT COORDS="645,8,792,186" OnClick="pintar('costurera')"style="cursor: pointer">
 <!-- bombero-->
-<AREA SHAPE=RECT COORDS="641,194,796,368" OnClick="pintar('bombero')">
+<AREA SHAPE=RECT COORDS="641,194,796,368" OnClick="pintar('bombero')"style="cursor: pointer">
 
 </MAP>
+ </div>
+
+</div>
 
  </body>
 </HTML>
